# btv

./: .env.example  .gitignore  README.en.md  README.md  README_EN.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
api/: auth.py  config.py  scanner.py  server.py
web/: index.html
web/css/: style.css
